--- a/start.html
+++ b/start.html
@@ -8,10 +8,11 @@
             <div class="navi-bar">
                 <span>
                     <ul class="navi-links">
-                        <a href="">Home</a>
-                        <a href="">Packages</a>
-                        <a href="">About-Us</a>
-                        <a href="">Contact</a>
+                        <a href="#"> Home </a>
+                        <a href="#"> Packages </a>
+                        <a href="#"> About-Us </a>
+                        <a href="#bottom">Contact</a>
+                        <input type="text" class="search" placeholder="Search">
                     </ul>
                 </span>
             </div>
