--- a/start.html
+++ b/start.html
@@ -16,6 +16,15 @@
                     </ul>
                 </span>
             </div>
+            <div class="frontal-bar">
+
+            </div>
+            <div class="middle-bar">
+
+            </div>
+            <div class="bottom-bar">
+
+            </div>
         </nav>
     </body>
 </html>
