--- a/start.html
+++ b/start.html
@@ -12,19 +12,19 @@
                         <a href="#"> Packages </a>
                         <a href="#"> About-Us </a>
                         <a href="#bottom">Contact</a>
-                        <input type="text" class="search" placeholder="Search">
+                        <a href="">Sign up</a>
                     </ul>
                 </span>
-            </div>
-            <div class="frontal-bar">
-
-            </div>
-            <div class="middle-bar">
-
-            </div>
-            <div class="bottom-bar">
-
-            </div>
+                </div>
         </nav>
+    <div class="frontal-bar">
+    <img src="www.google.com/url?sa=i&url=https%3A%2F%2Fwww.crazyegg.com%2Fblog%2Fexample-travel-websites%2F&psig=AOvVaw2UK8_4_6xsDxxEd0gZbTAk&ust=1704027317700000&source=images&cd=vfe&ved=0CBIQjRxqFwoTCPjKrsuat4MDFQAAAAAdAAAAABAE" class="center">
+    </div>
+    <div class="middle-bar">
+
+    </div>
+    <div class="bottom-bar">
+
+    </div>
     </body>
 </html>
