--- a/start.html
+++ b/start.html
@@ -18,7 +18,7 @@
                 </div>
         </nav>
     <div class="frontal-bar">
-    <img src="www.google.com/url?sa=i&url=https%3A%2F%2Fwww.crazyegg.com%2Fblog%2Fexample-travel-websites%2F&psig=AOvVaw2UK8_4_6xsDxxEd0gZbTAk&ust=1704027317700000&source=images&cd=vfe&ved=0CBIQjRxqFwoTCPjKrsuat4MDFQAAAAAdAAAAABAE" class="center">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6WfNAoD4dt4_k43pB6MZUS5USpJrDPDtY2Rqgdhenig&s.jpg" class="center">
     </div>
     <div class="middle-bar">
 
