--- a/start.html
+++ b/start.html
@@ -18,8 +18,9 @@
                 </div>
         </nav>
     <div class="frontal-bar">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6WfNAoD4dt4_k43pB6MZUS5USpJrDPDtY2Rqgdhenig&s.jpg" class="center">
-    </div>
+    <img src="https://images.unsplash.com/photo-1485470733090-0aae1788d5af?q=80&w=1834&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.jpg" class="center">
+    <input type="search" class="search-bar">
+</div>
     <div class="middle-bar">
 
     </div>
