--- a/start.html
+++ b/start.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
         <title>Menubar</title>
     </head>
@@ -20,6 +21,7 @@
     <div class="frontal-bar">
     <img src="https://images.unsplash.com/photo-1485470733090-0aae1788d5af?q=80&w=1834&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.jpg" class="center">
     <input type="search" class="search-bar">
+    <button class="btn"><i class="fa fa-search"></i></button>
 </div>
     <div class="middle-bar">
 
