--- a/start.html
+++ b/start.html
@@ -19,8 +19,9 @@
         </nav>
     <div class="frontal-bar">
     <img src="https://images.unsplash.com/photo-1485470733090-0aae1788d5af?q=80&w=1834&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.jpg" class="center">
-
+        <i class="search-icon fas fa-search"></i>
         <input type="search-bar" class="search-bar" placeholder="search">
+        <button id="search-button">search</button>
     </div>
 </div>
     <div class="middle-bar">
