--- a/start.html
+++ b/start.html
@@ -24,7 +24,10 @@
 
     </div>
     <div class="bottom-bar">
-
+    <footer id="footer">
+        <div class="footer-bg-wrapper">==$0::before
+            <div class="footer-bg"><img width="1920" height="466" class=" lazyloaded" data-src="https://media.nepaltourstravel.com/themes/images/footer-bg.svg" alt="Welcome Nepal Treks Pvt. Ltd." src="https://media.nepaltourstravel.com/themes/images/footer-bg.svg"></div></div>
+    </footer>
     </div>
     </body>
 </html>
