--- a/start.html
+++ b/start.html
@@ -12,7 +12,7 @@
                         <a href="#"> Packages </a>
                         <a href="#"> About-Us </a>
                         <a href="#bottom">Contact</a>
-                        <a href="">Sign up</a>
+                        <a href="login.html">Sign up</a>
                     </ul>
                 </span>
                 </div>
