--- a/start.html
+++ b/start.html
@@ -1,6 +1,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Menubar</title>
     </head>
     <body>
@@ -18,15 +19,17 @@
                 </div>
         </nav>
     <div class="frontal-bar">
+        <legend class="searchbar-legend">Let The Journey spark your Life</legend>
     <img src="https://images.unsplash.com/photo-1485470733090-0aae1788d5af?q=80&w=1834&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.jpg" class="center">
-        <i class="search-icon fas fa-search"></i>
-        <input type="search-bar" class="search-bar" placeholder="search">
-        <button id="search-button">search</button>
+       <form action="" method="get"> <input type="search-bar" class="search-bar" placeholder="search">
+        <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
     </div>
 </div>
     <div class="middle-bar">
 
     </div>
+
     <div class="bottom-bar">
         <section>
         <div class="rows">
@@ -62,13 +65,13 @@
                                 <div class="col-sm-3 foot-social foot-spec foot-com">
                                     <h4 class="white-color"><span class="white-color">Follow</span> with us</h4>
                                     <p class="white-color">Many Other Social Platforms Where You Can Connect With Nepal Tour & Travel and get more information about available offers and tour packages.</p>
-                                    <ul>
+                                    <span>
                                         <li><a href="#"><i class="fa fa-facebook white-color" aria-hidden="true"></i></a> </li>
                                         <li><a href="#"><i class="fa fa-google-plus white-color" aria-hidden="true"></i></a> </li>
                                         <li><a href="#"><i class="fa fa-twitter white-color" aria-hidden="true"></i></a> </li>
                                         <li><a href="#"><i class="fa fa-linkedin white-color" aria-hidden="true"></i></a> </li>
                                         <li><a href="#"><i class="fa fa-youtube white-color" aria-hidden="true"></i></a> </li>
-                                    </ul>
+                                    </span>
                                 </div>
                             </div>
 
