--- a/start.html
+++ b/start.html
@@ -21,9 +21,11 @@
     <div class="frontal-bar">
         <legend class="searchbar-legend">Let The Journey spark your Life</legend>
     <img src="https://images.unsplash.com/photo-1485470733090-0aae1788d5af?q=80&w=1834&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.jpg" class="center">
-       <form action="" method="get"> <input type="search-bar" class="search-bar" placeholder="search">
+       <div class="search"><form action="" method="get">
+         <input type="search-bar" class="search-bar" placeholder="search">
         <button type="submit"><i class="fa fa-search"></i></button>
     </form>
+    </div>
     </div>
 </div>
     <div class="middle-bar">
@@ -71,21 +73,10 @@
                                         <li><a href="#"><i class="fa fa-twitter white-color" aria-hidden="true"></i></a> </li>
                                         <li><a href="#"><i class="fa fa-linkedin white-color" aria-hidden="true"></i></a> </li>
                                         <li><a href="#"><i class="fa fa-youtube white-color" aria-hidden="true"></i></a> </li>
+                                        <li><a href="#"><i class="fa fa-whatsapp white-color" aria-hidden="true"></i></a> </li>
                                     </span>
                                 </div>
                             </div>
-
-
-                            <div class="whatsapp">
-                                <a href="https://api.whatsapp.com/send?phone=9803284872&text=Hello%20Sir" target="_blank"><img src="https://th.bing.com/th/id/R.c19c4d4c58f6357c709f8798cbe2ac8a?rik=f%2b5Q9TyNj8bGfg&pid=ImgRaw&r=0.png" class="img-responsive" alt="whatsapp"></a>
-
-                            </div>
-
-
-
-
-
-                        
                         </div>
                     </div>
                 </div>
