--- a/start.html
+++ b/start.html
@@ -20,11 +20,11 @@
                 </div>
         </nav>
     <div class="frontal-bar">
-        <legend class="searchbar-legend">Let The Journey spark your Life</legend>
+        <legend class="searchbar-legend">LET THE JOURNEY SPARK YOUR LIFE</legend>
     <img src="https://images.unsplash.com/photo-1485470733090-0aae1788d5af?q=80&w=1834&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.jpg" class="center">
     <div class="search-container">
         <form action="/search">
-           <input type="text" placeholder="Search.." name="query">
+           <input type="text" placeholder="Search for a destination" name="query">
            <button type="submit"><i class="fa fa-search"></i></button>
         </form>
        </div>
@@ -68,25 +68,16 @@
                                 <div class="col-sm-3 foot-social foot-spec foot-com">
                                     <h4 class="white-color"><span class="white-color">Follow</span> with us</h4>
                                     <p class="white-color">Many Other Social Platforms Where You Can Connect With K&K Tour & Travel and get more information about available offers and tour packages.</p>
-                                    <span>
-                                        <li><a href="https://www.facebook.com/kuberkathayat123"><i class="fa fa-facebook white-color" aria-hidden="true"></i></a> </li>
-                                        <li><a href="kubskathayat01@gmail.com"><i class="fa fa-google-plus white-color" aria-hidden="true"></i></a> </li>
-                                        <li><a href="#"><i class="fa fa-twitter white-color" aria-hidden="true"></i></a> </li>
-                                        <li><a href="#"><i class="fa fa-linkedin white-color" aria-hidden="true"></i></a> </li>
-                                        <li><a href="#"><i class="fa fa-youtube white-color" aria-hidden="true"></i></a> </li>
-                                        <li><a href="https://api.whatsapp.com/send?phone=9803284872&text=Hello%20Sir"><i class="fa fa-whatsapp white-color" aria-hidden="true"></i></a> </li>
+                                    <span class="social-icon">
+                                        <a href="https://www.facebook.com/kuberkathayat123"><i class="fa fa-facebook white-color" aria-hidden="true"></i></a>
+                                        <a href="kubskathayat01@gmail.com"><i class="fa fa-google-plus white-color" aria-hidden="true"></i></a>
+                                        <a href="#"><i class="fa fa-twitter white-color" aria-hidden="true"></i></a>
+                                        <a href="#"><i class="fa fa-linkedin white-color" aria-hidden="true"></i></a>
+                                        <a href="#"><i class="fa fa-youtube white-color" aria-hidden="true"></i></a>
+                                        <a href="https://api.whatsapp.com/send?phone=9803284872&text=Hello%20Sir"><i class="fa fa-whatsapp white-color" aria-hidden="true"></i></a>
                                     </span>
                                 </div>
                             </div>
-<<<<<<< HEAD
-=======
-
-
-
-
-
-                        
->>>>>>> 35fc277ce9d25f1ba720bc850267cfbe77a8aace
                         </div>
                     </div>
                 </div>
