--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
     }
   }
   .div-3 {
-    disply: flex;
+    display: flex;
     flex-direction: column;
     box-shadow: 0px 16px 36px 0px rgba(0, 0, 0, 0.08);
     overflow: hidden;
