--- a/login.html
+++ b/login.html
@@ -18,11 +18,11 @@
       <span class="span-2">
         <div class="div-6">Sign up</div>
         <div class="div-7">Full Name</div>
-        <div class="div-8">Enter your full name</div>
+        <div class="div-8">_________________</div>
         <div class="div-9">PASSWORD</div>
-        <div class="div-10">Enter your full name</div>
+        <div class="div-10">________________</div>
         <div class="div-11">E-MAIL ID</div>
-        <div class="div-12">Enter your full name</div>
+        <div class="div-12">_________________</div>
         <span class="span-3">
           <div class="div-13">Confirm and</div>
           <span class="span-4">Sign Up</span>
