--- a/start.html
+++ b/start.html
@@ -11,9 +11,9 @@
                 <span>
                     <ul class="navi-links">
                         <a href="#"> Home </a>
-                        <a href="#"> Packages </a>
+                        <a href="#hotels"> Packages </a>
                         <a href="#"> About-Us </a>
-                        <a href="#bottom">Contact</a>
+                        <a href="#social">Contact</a>
                         <a href="login.html">Sign up</a>
                     </ul>
                 </span>
@@ -31,7 +31,30 @@
     </div>
 </div>
     <div class="middle-bar">
-
+          <section id="hotels">
+            <h2 style="color:white;">Popular Hotels</h2>
+            <span>
+                    <li>
+                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2a/b5/2f/f6/hotel-travel-inn.jpg?w=700&h=-1&s=1.png" alt="Hotel 1" height="250" width="250">
+                <h3>Hotel 1</h3>
+                <p>Location: Lakeside,Pokhara</p>
+                <p>Price: Rs3500 per night</p>
+                <a href="booking.html"><button>Book Now</button></a>
+    </li><li>
+                <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/82128136.jpg?k=5df387bd9df98977db2b9766dbb27c71d343516cfdb65abe77f483f70b248be0&o=&hp=1.png" alt="Hotel 2" height="250" width="250">
+                <h3>Hotel 2</h3>
+                <p>Location: Sauraha,Chitwan</p>
+                <p>Price: Rs2000 per night</p>
+                <a href="booking.html"><button>Book Now</button></a>
+             </li><li>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQFP6USUcfNihJS0OkFDxiHTuTu_tOJuYld_aRl1_PNTn1FShXU4RuzCx7v7pMDBaRUrE&usqp=CAU.png" alt="Hotel 3" width="250" height="250">
+                <h3>Hotel 3</h3>
+                <p>Location: Banseshwor,Kathmandu</p>
+                <p>Price: Rs3000 per night</p>
+                <a href="booking.html"><button>Book Now</button></a>
+                </li>
+            </span>
+          </section>
     </div>
     <div class="bottom-bar">
         <section>
@@ -67,7 +90,7 @@
                                 </div>
                                 <div class="col-sm-3 foot-social foot-spec foot-com">
                                     <h4 class="white-color"><span class="white-color">Follow</span> with us</h4>
-                                    <p class="white-color">Many Other Social Platforms Where You Can Connect With K&K Tour & Travel and get more information about available offers and tour packages.</p>
+                                    <p class="white-color" id="social">Many Other Social Platforms Where You Can Connect With K&K Tour & Travel and get more information about available offers and tour packages.</p>
                                     <span class="social-icon">
                                         <a href="https://www.facebook.com/kuberkathayat123"><i class="fa fa-facebook white-color" aria-hidden="true"></i></a>
                                         <a href="kubskathayat01@gmail.com"><i class="fa fa-google-plus white-color" aria-hidden="true"></i></a>
