--- a/login.html
+++ b/login.html
@@ -1,383 +1,103 @@
-<div class="div">
-  <div class="div-2">
-    <div class="column">
-      <div class="div-3">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&display=swap"
+    />
+  </head>
+  <body>
+    <div class="desktop-1">
+      <div class="f-r-a-m-e-sign-up">
         <img
-          loading="lazy"
-          srcset="..."
-          class="img"
+          class="f-r-a-m-e-sign-up-child"
+          alt=""
+          src="./public/rectangle-2@2x.png"
         />
-        <div class="div-4">Already have an account ?</div>
-        <div class="div-5">
-          Travel is the only thing you buy that makes you richer.
+
+        <div class="label-account">
+          <div class="already-have-an">Already have an account ?</div>
+          <div class="travel-is-the">
+            Travel is the only thing you buy that makes you richer.
+          </div>
         </div>
-        <span class="span">Log in</span>
+        <button class="button">
+          <div class="button-text">Log In</div>
+        </button>
+      </div>
+      <div class="f-r-a-m-e-input-section">
+        <div class="f-r-a-m-e-input-section-child"></div>
+        <h1 class="sign-up">Sign Up</h1>
+        <form class="f-r-a-m-e-input-fields">
+          <div class="frame-username">
+            <div class="label-username">
+              <div class="text-field">
+                <div class="label">Full Name</div>
+                <div class="f-r-a-m-e-email">
+                  <input
+                    class="text-field1"
+                    placeholder="Enter Your Full Name"
+                    type="text"
+                  />
+                </div>
+                <div class="this-is-hint-text-wrapper">
+                  <div class="this-is-hint">This is hint text.</div>
+                </div>
+              </div>
+              <div class="text-field2">
+                <div class="label1">Password</div>
+                <div class="text-field-wrapper">
+                  <input
+                    class="text-field3"
+                    placeholder="********"
+                    type="text"
+                  />
+                </div>
+                <div class="textfield-email">
+                  <div class="this-is-hint1">8+ Digit</div>
+                </div>
+              </div>
+            </div>
+            <div class="text-field4">
+              <div class="label2">E-mail ID</div>
+              <div class="t-e-x-t-connectwith-s-m">
+                <input
+                  class="text-field5"
+                  placeholder="  @gmail.com"
+                  type="text"
+                />
+              </div>
+              <div class="b-u-t-t-o-n-text-facebook">
+                <div class="this-is-hint2">Active Email Addres</div>
+              </div>
+            </div>
+          </div>
+          <button class="button1">
+            <div class="button-text1">Sign up</div>
+          </button>
+        </form>
+        <div class="f-r-a-m-e-social-media-buttons">
+          <div class="use-your-favorite">
+            Use your favorite social media to sign up
+          </div>
+          <div class="buttons-row">
+            <button class="button2">
+              <div class="button-text2">Facebook</div>
+            </button>
+            <button class="button3">
+              <div class="button-text3">Google</div>
+            </button>
+            <button class="button4">
+              <div class="button-text4">Twittwe</div>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="column-2">
-      <span class="span-2">
-        <div class="div-6">Sign up</div>
-        <div class="div-7">Full Name</div>
-        <div class="div-8">_________________</div>
-        <div class="div-9">PASSWORD</div>
-<<<<<<< Updated upstream
-        <div class="div-10">________________</div>
-        <div class="div-11">E-MAIL ID</div>
-        <div class="div-12">_________________</div>
-=======
-        <div class="div-10">Enter your Password</div>
-        <div class="div-11">E-MAIL ID</div>
-        <div class="div-12">Enter your E-mail id</div>
->>>>>>> Stashed changes
-        <span class="span-3">
-          <div class="div-13">Confirm and</div>
-          <span class="span-4">Sign Up</span>
-        </span>
-        <div class="div-14">
-          <span class="span-5">
-            <div class="div-15">Use your favorite social media site</div>
-            <div class="div-16">
-              <span class="span-6">Google</span>
-              <span class="span-7">Facebook</span>
-            </div>
-          </span>
-          <span class="span-8">Twitter</span>
-        </div>
-      </span>
-    </div>
-  </div>
-</div>
-<style>
-  .div {
-    background-color: var(--Primary-300, #bdb7fb);
-    padding: 50px 77px;
-  }
-  @media (max-width: 991px) {
-    .div {
-      padding: 0 20px;
-    }
-  }
-  .div-2 {
-    gap: 20px;
-    display: flex;
-  }
-  @media (max-width: 991px) {
-    .div-2 {
-      flex-direction: column;
-      align-items: stretch;
-      gap: 0px;
-    }
-  }
-  .column {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 50%;
-    margin-left: 0px;
-  }
-  @media (max-width: 991px) {
-    .column {
-      width: 100%;
-    }
-  }
-  .div-3 {
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0px 16px 36px 0px rgba(0, 0, 0, 0.08);
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    min-height: 714px;
-    align-items: start;
-    margin: auto 0;
-    padding: 50px 77px;
-  }
-  @media (max-width: 991px) {
-    .div-3 {
-      max-width: 100%;
-      margin-top: 40px;
-      padding: 0 20px;
-    }
-  }
-  .img {
-    position: absolute;
-    inset: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-  .div-4 {
-    position: relative;
-    color: #000;
-    margin-top: 176px;
-    font: 600 24px/140% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-4 {
-      margin-top: 40px;
-    }
-  }
-  .div-5 {
-    position: relative;
-    color: #000;
-    width: 387px;
-    max-width: 100%;
-    font: 500 20px/30px Manrope, sans-serif;
-  }
-  .span {
-    position: relative;
-    color: var(--Primary-50, #fff);
-    white-space: nowrap;
-    justify-content: center;
-    border-radius: var(--Cornor--radius-Corner-radius-xl, 22px);
-    background-color: var(--Primary-600, #6a3ee9);
-    margin: 35px 0 194px;
-    padding: 12px 32px;
-    font: 600 20px/140% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .span {
-      white-space: initial;
-      margin-bottom: 40px;
-      padding: 0 20px;
-    }
-  }
-  .column-2 {
-    display: flex;
-    flex-direction: column;
-    line-height: normal;
-    width: 50%;
-    margin-left: 20px;
-  }
-  @media (max-width: 991px) {
-    .column-2 {
-      width: 100%;
-    }
-  }
-  .span-2 {
-    border-radius: var(--Cornor--radius-Corner-radius-lg, 16px);
-    border: 1px solid var(--Primary-700, #5b2cd5);
-    box-shadow: 0px 16px 36px 0px rgba(0, 0, 0, 0.08);
-    background-color: var(--Primary-50, #fff);
-    display: flex;
-    margin-top: 54px;
-    flex-direction: column;
-    width: 100%;
-    padding: 50px 80px 50px 57px;
-  }
-  @media (max-width: 991px) {
-    .span-2 {
-      max-width: 100%;
-      margin-top: 40px;
-      padding: 0 20px;
-    }
-  }
-  .div-6 {
-    color: var(--Primary-900, #402092);
-    align-self: start;
-    white-space: nowrap;
-    margin: 54px 0 0 26px;
-    font: 600 40px/120% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-6 {
-      white-space: initial;
-      margin: 40px 0 0 10px;
-    }
-  }
-  .div-7 {
-    color: #000;
-    align-self: start;
-    white-space: nowrap;
-    margin: 54px 0 0 32px;
-    font: 600 20px/150% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-7 {
-      white-space: initial;
-      margin: 40px 0 0 10px;
-    }
-  }
-  .div-8 {
-    color: #000;
-    align-self: start;
-    white-space: nowrap;
-    margin: 14px 0 0 32px;
-    font: 400 16px/160% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-8 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-9 {
-    color: #000;
-    align-self: start;
-    white-space: nowrap;
-    margin: 36px 0 0 32px;
-    font: 600 20px/150% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-9 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-10 {
-    color: #000;
-    align-self: start;
-    white-space: nowrap;
-    margin: 10px 0 0 32px;
-    font: 400 16px/160% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-10 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-11 {
-    color: #000;
-    align-self: start;
-    white-space: nowrap;
-    margin: 32px 0 0 32px;
-    font: 600 20px/150% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-11 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .div-12 {
-    color: #000;
-    align-self: start;
-    white-space: nowrap;
-    margin: 12px 0 0 32px;
-    font: 400 16px/160% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-12 {
-      margin-left: 10px;
-      white-space: initial;
-    }
-  }
-  .span-3 {
-    align-self: end;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 20px;
-    margin: 71px 48px 0 0;
-  }
-  @media (max-width: 991px) {
-    .span-3 {
-      margin: 40px 10px 0 0;
-    }
-  }
-  .div-13 {
-    color: #000;
-    margin: auto 0;
-    font: 400 16px/160% Manrope, sans-serif;
-  }
-  .span-4 {
-    color: var(--Primary-50, #fff);
-    white-space: nowrap;
-    justify-content: center;
-    border-radius: var(--Cornor--radius-Corner-radius-xl, 22px);
-    background-color: var(--Primary-600, #6a3ee9);
-    align-self: stretch;
-    flex-grow: 1;
-    padding: 12px 32px;
-    font: 600 20px/140% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .span-4 {
-      white-space: initial;
-      padding: 0 20px;
-    }
-  }
-  .div-14 {
-    align-self: start;
-    display: flex;
-    width: 418px;
-    max-width: 100%;
-    justify-content: space-between;
-    gap: 20px;
-    margin: 34px 0 65px;
-  }
-  @media (max-width: 991px) {
-    .div-14 {
-      margin-bottom: 40px;
-    }
-  }
-  .span-5 {
-    display: flex;
-    flex-grow: 1;
-    flex-basis: 0%;
-    flex-direction: column;
-  }
-  .div-15 {
-    color: #000;
-    white-space: nowrap;
-    font: 400 16px/160% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .div-15 {
-      white-space: initial;
-    }
-  }
-  .div-16 {
-    display: flex;
-    margin-top: 7px;
-    padding-right: 10px;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  .span-6 {
-    color: var(--Primary-50, #fff);
-    white-space: nowrap;
-    justify-content: center;
-    border-radius: var(--Cornor--radius-Corner-radius-xl, 22px);
-    background-color: var(--Primary-600, #6a3ee9);
-    padding: 8px 20px;
-    font: 600 14px/140% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .span-6 {
-      white-space: initial;
-    }
-  }
-  .span-7 {
-    color: var(--Primary-50, #fff);
-    white-space: nowrap;
-    justify-content: center;
-    border-radius: var(--Cornor--radius-Corner-radius-xl, 22px);
-    background-color: var(--Primary-600, #6a3ee9);
-    padding: 8px 20px;
-    font: 600 14px/140% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .span-7 {
-      white-space: initial;
-    }
-  }
-  .span-8 {
-    color: var(--Primary-50, #fff);
-    white-space: nowrap;
-    justify-content: center;
-    border-radius: var(--Cornor--radius-Corner-radius-xl, 22px);
-    background-color: var(--Primary-600, #6a3ee9);
-    align-self: end;
-    margin-top: 33px;
-    padding: 8px 20px;
-    font: 600 14px/140% Manrope, sans-serif;
-  }
-  @media (max-width: 991px) {
-    .span-8 {
-      white-space: initial;
-    }
-  }
-</style>
+  </body>
+  </html>
