--- a/start.html
+++ b/start.html
@@ -23,15 +23,34 @@
         <legend class="searchbar-legend">LET THE JOURNEY SPARK YOUR LIFE</legend>
     <img src="https://images.unsplash.com/photo-1485470733090-0aae1788d5af?q=80&w=1834&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.jpg" class="center">
     <div class="search-container">
-        <form action="/search">
-           <input type="text" placeholder="Search for a destination" name="query">
-           <button type="submit"><i class="fa fa-search"></i></button>
+        <form class="search-form align-right" action="/search">
+          <input type="text" placeholder="Search for a destination" name="query">
+          <button type="submit"><i class="fa fa-search"></i></button>
         </form>
-       </div>
+      </div>
     </div>
 </div>
+<h3 class="package-title">Choose Your Package</h3>
     <div class="middle-bar">
-
+        <div class="-frame">
+            <div class="-option">
+              <div class="package-tier">
+                <span class="price">$9.99</span>
+                <span class="description">Basic Package</span>
+                <a class="button" href="#">Sign Up</a>
+              </div>
+              <div class="package-tier">
+                <span class="price">$19.99</span>
+                <span class="description">Premium Package</span>
+                <a class="button href="#">Sign Up</a>
+              </div>
+              <div class="package-tier">
+                <span class="price">$29.99</span>
+                <span class="description">Ultimate Package</span>
+                <a class="button" href="#">Sign Up</a>
+              </div>
+            </div>
+          </div>
     </div>
     <div class="bottom-bar">
         <section>
