--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         <img
           class="f-r-a-m-e-sign-up-child"
           alt=""
-          src="./public/rectangle-2@2x.png"
+          src="https://unsplash.com/photos/person-holding-black-dslr-camera-riLA6oy6ekM"
         />
 
         <div class="label-account">
